Adapted Makefile for VaRa usage

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -33,6 +33,10 @@
 # ################################################################
 SED = sed
 
+# Use VaRA specific clang
+CC = $(VARA_CLANG_BIN_DIR)clang
+CXX = $(VARA_CLANG_BIN_DIR)clang++
+
 # Version numbers
 LIBVER_MAJOR_SCRIPT:=`$(SED) -n '/define LZ4_VERSION_MAJOR/s/.*[[:blank:]]\([0-9][0-9]*\).*/\1/p' < ./lz4.h`
 LIBVER_MINOR_SCRIPT:=`$(SED) -n '/define LZ4_VERSION_MINOR/s/.*[[:blank:]]\([0-9][0-9]*\).*/\1/p' < ./lz4.h`
@@ -72,6 +76,13 @@ else
 	SHARED_EXT_MAJOR = $(SHARED_EXT).$(LIBVER_MAJOR)
 	SHARED_EXT_VER = $(SHARED_EXT).$(LIBVER)
 endif
+
+# Add VaRA specific compiler flags
+CPPFLAGS += -fvara-feature -fsanitize=vara -fvara-instr=trace_event -flto
+LDFLAGS += -fuse-ld=lld
+
+# VaRA feature model
+CPPFLAGS += -fvara-fm-path=$(LZ4_FEATURE_MODEL)
 
 .PHONY: default
 default: lib-release
