--- a/lib/Makefile
+++ b/lib/Makefile
@@ -34,8 +34,8 @@
 SED = sed
 
 # Use VaRA specific clang
-CC = $(VARA_CLANG_BIN_DIR)clang
-CXX = $(VARA_CLANG_BIN_DIR)clang++
+CC = $(VARA_CLANG_BIN_DIR)/clang
+CXX = $(VARA_CLANG_BIN_DIR)/clang++
 
 # Version numbers
 LIBVER_MAJOR_SCRIPT:=`$(SED) -n '/define LZ4_VERSION_MAJOR/s/.*[[:blank:]]\([0-9][0-9]*\).*/\1/p' < ./lz4.h`
@@ -57,6 +57,16 @@ DEBUGFLAGS:= -Wall -Wextra -Wcast-qual -Wcast-align -Wshadow \
              -Wswitch-enum -Wdeclaration-after-statement -Wstrict-prototypes \
              -Wundef -Wpointer-arith -Wstrict-aliasing=1
 CFLAGS  += $(DEBUGFLAGS)
+
+
+# Add VaRA specific compiler flags
+CPPFLAGS += -fvara-feature -fsanitize=vara -fvara-instr=trace_event
+CPPFLAGS += -flto=thin
+LDFLAGS += -fuse-ld=lld
+
+# VaRA feature model
+CPPFLAGS += -fvara-fm-path=$(LZ4_FEATURE_MODEL)
+
 FLAGS    = $(CFLAGS) $(CPPFLAGS) $(LDFLAGS)
 
 SRCFILES := $(sort $(wildcard *.c))
@@ -76,13 +86,6 @@ else
 	SHARED_EXT_MAJOR = $(SHARED_EXT).$(LIBVER_MAJOR)
 	SHARED_EXT_VER = $(SHARED_EXT).$(LIBVER)
 endif
-
-# Add VaRA specific compiler flags
-CPPFLAGS += -fvara-feature -fsanitize=vara -fvara-instr=trace_event -flto
-LDFLAGS += -fuse-ld=lld
-
-# VaRA feature model
-CPPFLAGS += -fvara-fm-path=$(LZ4_FEATURE_MODEL)
 
 .PHONY: default
 default: lib-release
